chore(examples): add verdict bib entry test

--- a/examples/full/literature.bib
+++ b/examples/full/literature.bib
@@ -176,3 +176,13 @@
     lawfirstpage = {42},
     lawdate = {2020-03-19}
 }
+
+@verdict{shell,
+    author			= {o.V.},
+    title			= {I ZR 138/99},
+    shorttitle		= {Shell-Urteil},
+    verdictcourt	= {BGH},
+    verdictdate		= {2001-11-22},
+    url				= {http://juris.bundesgerichtshof.de/cgi-bin/rechtsprechung/document.py?Gericht=bgh&nr=23718},
+    urldate			= {2020-06-03}
+}
