--- a/examples/full/full.tex
+++ b/examples/full/full.tex
@@ -225,6 +225,8 @@ Artikel kann man auch zitieren.\ifootcite{linklabs_zwave_vs_zigbee}
 
 Gem.\ §2 Abs.\ 3 S.\ 3 BGB kann man auch Gesetze zitieren btw.\nocite{bgb}
 
+Man kann auch Urteile zitieren.\ifootcite{shell}
+
 \begin{dhbwappendices}
 
     \dhbwAppendix{test}
