chore(examples): update verdict and law bib entry

--- a/examples/full/literature.bib
+++ b/examples/full/literature.bib
@@ -166,23 +166,23 @@
     pages		= {69--420}
 }
 
-@germanlaw{bgb,
-    title = {Bürgerliches Gesetzbuch},
-    author = {o.V.},
-    shorttitle = {BGB},
-    lawsource = {Bundesgesetzblatt},
-    lawsourceyear = {2002},
-    lawvolume = {I},
-    lawfirstpage = {42},
-    lawdate = {2020-03-19}
+@law{bgb,
+    title       = {Bürgerliches Gesetzbuch},
+    author      = {o.V.},
+    shorttitle  = {BGB},
+    src         = {Bundesgesetzblatt},
+    srcyear     = {2002},
+    srcvol      = {I},
+    srcpage     = {42},
+    date        = {2020-03-19}
 }
 
 @verdict{shell,
     author			= {o.V.},
     title			= {I ZR 138/99},
     shorttitle		= {Shell-Urteil},
-    verdictcourt	= {BGH},
-    verdictdate		= {2001-11-22},
+    court	        = {BGH},
+    date		    = {2001-11-22},
     url				= {http://juris.bundesgerichtshof.de/cgi-bin/rechtsprechung/document.py?Gericht=bgh&nr=23718},
     urldate			= {2020-06-03}
 }
