fix: explicitly use acro v2

--- a/src/udhbwvst.cls
+++ b/src/udhbwvst.cls
@@ -125,7 +125,7 @@
 \RequirePackage{xcolor}
 \RequirePackage{listings}
 \RequirePackage{xparse}
-\RequirePackage{acro}
+\RequirePackage[version=2]{acro}
 \RequirePackage[parfill]{parskip}
 \RequirePackage{titletoc}
 \RequirePackage{titlesec}
