chore(examples): add abstract to full.tex

--- a/examples/full/full.tex
+++ b/examples/full/full.tex
@@ -9,7 +9,8 @@
     bib-file        = literature.bib,   % path to bibliography file
     plantuml        = true,             % use plantuml
     title-style     = default,          % title page style
-    font-size       = 12pt              % sets the font size
+    font-size       = 12pt,             % sets the font size
+    abstract-file   = abstract.tex      % path to the abstract
 ]{udhbwvst}
 
 \dhbwSetup{%
