chore(examples): use better abstract in full.tex

--- a/examples/full/abstract.tex
+++ b/examples/full/abstract.tex
@@ -1,5 +1,7 @@
 \section*{Abstract}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet eleifend urna. Praesent placerat auctor libero, vel tincidunt mi. Aenean iaculis risus diam, in posuere odio ullamcorper et. Mauris sed sem at nunc posuere sollicitudin et ut nisl. Etiam a mi luctus, eleifend elit in, bibendum mauris. Nulla accumsan ullamcorper velit, sit amet posuere arcu tempor sed. Morbi rutrum pellentesque ex, ut ultrices sem blandit sed. Duis sollicitudin orci sed ante pharetra posuere in nec turpis. Aliquam erat volutpat. Nunc condimentum ipsum sit amet nunc ullamcorper tristique. In hac habitasse platea dictumst. Integer sit amet aliquet ex. Etiam ut nisi eget est gravida mattis sit amet eget nisi. Donec eget varius nisl.
+It is a period of civil wars in the galaxy. A brave alliance of underground freedom fighters has challenged the tyranny and oppression of the awesome GALACTIC EMPIRE.
 
-Mauris eget porta quam. Nullam sed leo volutpat, faucibus augue in, sodales augue. Mauris interdum lorem sit amet eros varius, ac dictum mauris rutrum. Proin congue ligula non leo vehicula, nec tempus ipsum eleifend. Etiam dignissim erat id semper sagittis. Fusce pulvinar dui quis blandit pharetra. In eu risus ut elit lacinia venenatis ut sed sapien. 
+Striking from a fortress hidden among the billion stars of the galaxy, rebel spaceships have won their first victory in a battle with the powerful Imperial Starfleet. The EMPIRE fears that another defeat could bring a thousand more solar systems into the rebellion, and Imperial control over the galaxy would be lost forever.
+
+To crush the rebellion once and for all, the EMPIRE is constructing a sinister new battle station. Powerful enough to destroy an entire planet, its completion spells certain doom for the champions of freedom.
