fix: use better words in autoref
"Kapitel" for sections;
"Unterkapitel" for subsections, subsubsections and paragraphs

--- a/src/udhbwvst.cls
+++ b/src/udhbwvst.cls
@@ -82,6 +82,12 @@
       pdfencoding = {unicode},
       pdflang     = {de}
     }
+    \addto\extrasngerman{%
+      \renewcommand{\sectionautorefname}{Kapitel}%
+      \renewcommand{\subsectionautorefname}{Unterkapitel}%
+      \renewcommand{\subsubsectionautorefname}{Unterkapitel}%
+      \renewcommand{\paragraphautorefname}{Unterkapitel}%
+    }
 }
 
 \RequirePackage{fontspec}
