fix: enable numbering in pdf outline
this way one can distinct appendices from each other

--- a/src/udhbwvst.cls
+++ b/src/udhbwvst.cls
@@ -80,7 +80,8 @@
       pdfcreator  = {Lua\LaTeX},
       pdfproducer = {Lua\LaTeX},
       pdfencoding = {unicode},
-      pdflang     = {de}
+      pdflang     = {de},
+      bookmarksnumbered
     }
     \addto\extrasngerman{%
       \renewcommand{\sectionautorefname}{Kapitel}%
